# vs-praktikum

./: .gitignore
1/: VS_Protokoll_1.docx  ~$_Protokoll_1.docx
1/Aufgabe 3/: CMakeLists.txt  daytime.c
2/: VS_Protokoll_Muster.docx
2/AB2_Code/: CMakeLists.txt  HTTPServer.cpp  HTTPServer.h  main.cpp
3/: Sequenzdiagramm.uxf  VS_Protokoll_3.docx
4/: VS_Protokoll_4.docx  ~$_Protokoll_4.docx
4/Code/: CMakeLists.txt  Makefile  pub_sub_client.cc  pub_sub_config.h  pub_sub_receiver.cc  pub_sub_server.cc
5/: VS_Protokoll_5.docx
5/Code/: .nfs00000001377bff1100000015  CMakeLists.txt  Makefile  README.md  hashes.txt  main.cpp  pub_sub.proto  pub_sub_client.cc  pub_sub_common.proto  pub_sub_config.h  pub_sub_deliv.proto  pub_sub_receiver.cc  pub_sub_server.cc  sha256_crypto++.cpp  vcpkg.json
6/: SequenzSchinken.uxf  VS_Protokoll_6.docx
6/Code/src/: ChatClient.java  ChatProxy.java  ChatProxyImpl.java  ChatServerImpl.java  ClientProxy.java  Main.java
7/: PaketSchinken.uxf  VS_Protokoll_7.docx  ~$_Protokoll_7.docx
7/Code/: package-lock.json  package.json  pom.xml  tailwind.config.js
7/Code/src/: ChatClient.java  ChatHTTP.java  ChatServer.java  ClientProxyImpl.java  ServerMain.java
7/Code/src/http/: ChatClientServlet.java  ChatMessage.java  chat.jsp  login.jsp
7/Code/src/main/java/com/example/ab07/: ChatMessage.java  ChatServlet.java
7/Code/src/main/webapp/: chat.jsp  index.jsp
7/Code/src/main/webapp/WEB-INF/: web.xml
7/Code/src/main/webapp/css/: index.css
7/Code/src/rmi/: ChatClient.java  ChatProxy.java  ChatProxyImpl.java  ChatServer.java  ChatServerImpl.java  ClientProxy.java  ClientProxyImpl.java  ServerMain.java
8/: VS_Protokoll_8.docx  ~$_Protokoll_8.docx
8/Code/: README.md  pom.xml
8/Code/src/main/java/de/hsos/vs/: BillBoard.java  (+4 more)
8/Code/src/main/webapp/: billboard.html  billboard.js
8/ab08/: pom.xml
9/: VS_Protokoll_9.docx
9/Code/: .gitignore  pom.xml
9/Code/src/main/webapp/: billboardws.js
AB02/: CMakeLists.txt
AB03/: CMakeLists.txt  main.cpp  server.cpp  server.h
AB03/Client/: CMakeLists.txt  client.cpp  client.h  main.cpp
(+27 files in other folders)
